--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
           <div class="footer_detail">
             <h2 class="mynerve-regular">
               <a href="" class="text-light">
-                Feane
+                TakoHappy
               </a>
             </h2>
             <p>
